# esp32-rust-examples

./: .gitmodules  setup_env.bash
guruguru_rust/: CMakeLists.txt  README.md
guruguru_rust/assets/: Makefile
guruguru_rust/components/: freertos_shim
guruguru_rust/components/rust/: CMakeLists.txt  Cargo.toml  component.mk
guruguru_rust/components/rust/.cargo/: config
guruguru_rust/components/rust/src/: lib.rs
guruguru_rust/main/: CMakeLists.txt  hello_world_main.c
hello_world/components/rust/: build.sh  component.mk
hello_world/components/rust/src/: lib.rs
hello_world/main/: CMakeLists.txt  hello_world_main.c
idf/: Cargo.toml  build.rs  wrapper.h
idf/src/: lib.rs
m5stack/: Cargo.toml
m5stack/src/: lib.rs
peripheral/: Cargo.toml
peripheral/src/: gpio.rs  i2c.rs  lib.rs  spi.rs
print_format/components/rust/: Cargo.toml
print_format/components/rust/src/: lib.rs
vec/components/rust/src/: lib.rs
